--- a/lambda.yaml
+++ b/lambda.yaml
@@ -14,6 +14,9 @@ Resources:
       Path: /
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Tags:
+        - Key: "CostCenter"
+          Value: "projects.aws.alb-lambda"
 
   LambdaFunctionPermission:
     Type: AWS::Lambda::Permission
@@ -41,3 +44,6 @@ Resources:
               'body': 'HELLO WORLD!'
             }
             return response
+      Tags:
+        - Key: "CostCenter"
+          Value: "projects.aws.alb-lambda"
