--- a/full-service.yaml
+++ b/full-service.yaml
@@ -14,6 +14,8 @@ Resources:
           SourcePrefixListId: pl-0b220b9ea9b3c21f1
           ToPort: 80
       Tags:
+        - Key: Name
+          Value: projects.aws.alb-lambda
         - Key: "CostCenter"
           Value: "projects.aws.alb-lambda"
 
@@ -21,7 +23,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       SecurityGroups:
-        - !Ref AlbLambdaLoadBalancerSecGroup
+        - !Ref LoadBalancerSecGroup
       Subnets:
         - !ImportValue AlbLambdaPublicSubnetA
         - !ImportValue AlbLambdaPublicSubnetB
