Adding in the cert ARN but not going to use just yet

--- a/service.yaml
+++ b/service.yaml
@@ -45,10 +45,12 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       Protocol: HTTP
+      # Certificate: arn:aws:acm:us-east-1:654918520080:certificate/b4d67bb3-5d56-4d5e-bf83-cdf7cb04d4ba
       LoadBalancerArn: !Ref LoadBalancer
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref LoadBalancerTargetGroup
+
       Port: 80
       Tags:
         - Key: "CostCenter"
